--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800&display=swap');
 * {
-    font-family: "Poppins", sans-serif;
+    font-family: 'Inter', sans-serif;
   }
   .color {
     background-color: #333333;
